Fixes  #710 [HxSidebar] Toggler is not visible when using ResponsiveBreakpoint.None

--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
@@ -60,6 +60,7 @@
 	top: 50%;
 	left: 100%;
 	transform: translate(-50%, -50%);
+	display: none; /* Hide the sidebar toggler in navbar mode (when below the responsive breakpoint). */
 }
 
 .hx-sidebar-toggler-inner {
